* i2psnark:    - Show comment metadata on details page    - Fix rar icon    - Escape [] in URLs, chrome doesn't do it for us    - Tweak column spacing

--- a/installer/resources/themes/snark/light/snark.css
+++ b/installer/resources/themes/snark/light/snark.css
@@ -246,7 +246,7 @@ tfoot tr:nth-child(n+1) {
 }
 
 td {
-     padding: 1px;
+     padding: 2px 4px;
      color: #001 !important;
       opacity: 1;
      font-size: 8pt;
